kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  # - host: <Host>
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: nodejs-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-service
            port: 
              number: 80
